# setu

./: .gitignore  Cargo.toml  README.md  TESTING.md  build.rs  build_appimage.sh  build_local_msi.sh  gen_icon.py  setu.desktop  setu.wxs  setup_wsl.sh  test-search.bat  test-search.ps1
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: icon_32x32.rgba
src/: auth.rs  config.rs  db.rs  google_api.rs  lib.rs  main.rs  server.rs  settings.rs  sync.rs  tls.rs  tray.rs  vault.rs  vcard.rs
